--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -117,7 +117,7 @@
                                 <!-- [(ngModel)]="loginRequest.rememberMe" -->
                                 <label for="rememberme1">Nhớ mật khẩu</label>
                             </div>
-                            <a [routerLink]="['/auth/set-password']"
+                            <a [routerLink]="['/auth/resend-email-otp']"
                                 class="font-medium no-underline ml-2 text-right cursor-pointer"
                                 style="color: var(--primary-color)"
                                 >Quên mật khẩu?</a
