--- a/src/app/components/auth/set-password/set-password.component.html
+++ b/src/app/components/auth/set-password/set-password.component.html
@@ -2,7 +2,7 @@
 <div
     class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden"
 >
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
         <div class="flex flex-column align-items-center justify-content-center">
             <div
                 style="
@@ -26,13 +26,15 @@
                             height="50"
                             class="mb-3"
                         />
-                        <div class="text-900 text-3xl font-medium mb-3">
-                            Xin chào, Tiến Linh!
+                        <div class="text-600 text-2xl font-medium mb-3">
+                           THIẾT LẬP MẬT KHẨU MỚI
                         </div>
-                        <span class="text-600 font-medium"
-                            >Thay đổi mật </span
-                        >
+                        <!-- <span class="text-600 font-medium"
+                            >Thay đổi mật khẩu</span
+                        > -->
                     </div>
+
+                    <p-messages [(value)]="messages"></p-messages>
 
                     <div>
                         <div class="mb-3">
@@ -53,19 +55,19 @@
 
                             <div
                                 *ngIf="
-                                    loginForm.get('email')?.invalid &&
-                                    (loginForm.get('email')?.dirty ||
-                                        loginForm.get('email')?.touched)
+                                    resetPasswordForm.get('email')?.invalid &&
+                                    (resetPasswordForm.get('email')?.dirty ||
+                                        resetPasswordForm.get('email')?.touched)
                                 "
                             >
                                 <div
-                                    *ngIf="loginForm.get('email')?.errors?.['required']"
+                                    *ngIf="resetPasswordForm.get('email')?.errors?.['required']"
                                     class="error-message"
                                 >
                                     Vui lòng nhập email
                                 </div>
                                 <div
-                                    *ngIf="loginForm.get('email')?.errors?.['pattern']"
+                                    *ngIf="resetPasswordForm.get('email')?.errors?.['pattern']"
                                     class="error-message"
                                 >
                                     Email không hợp lệ.
@@ -77,56 +79,84 @@
                             <label
                                 for="password1"
                                 class="block text-900 font-medium text-xl mb-2"
-                                >Mật khẩu</label
+                                >Mật khẩu mới</label
                             >
                             <p-password
                                 id="password1"
-                                placeholder="Nhập mật khẩu"
+                                placeholder="Nhập mật khẩu mới"
                                 [toggleMask]="true"
-                                formControlName="password"
+                                formControlName="newPassword"
                                 inputStyleClass="w-full p-3 md:w-30rem"
                             ></p-password>
                             <div
                                 *ngIf="
-                                    loginForm.get('password')?.invalid &&
-                                    (loginForm.get('password')?.dirty ||
-                                        loginForm.get('password')?.touched)
+                                    resetPasswordForm.get('newPassword')?.invalid &&
+                                    (resetPasswordForm.get('newPassword')?.dirty ||
+                                        resetPasswordForm.get('newPassword')?.touched)
                                 "
                             >
                                 <div
-                                    *ngIf="loginForm.get('password')?.errors?.['required']"
+                                    *ngIf="resetPasswordForm.get('newPassword')?.errors?.['required']"
                                     class="error-message"
                                 >
-                                    Vui lòng nhập mật khẩu
+                                    Vui lòng nhập mật khẩu mới
                                 </div>
                             </div>
-
-                            <!-- [(ngModel)]="loginRequest.password" -->
                         </div>
 
-                        <div
-                            class="flex align-items-center justify-content-between mb-5 gap-5"
-                        >
-                            <div class="flex align-items-center">
-                                <p-checkbox
-                                    id="rememberme1"
-                                    [binary]="true"
-                                    styleClass="mr-2"
-                                    formControlName="rememberMe"
-                                ></p-checkbox>
-                                <!-- [(ngModel)]="loginRequest.rememberMe" -->
-                                <label for="rememberme1">Nhớ mật khẩu</label>
-                            </div>
-                            <a
+                        <div class="mb-3">
+                            <label
+                                for="confirmPassword"
+                                class="block text-900 font-medium text-xl mb-2"
+                                >Xác nhận mật khẩu mới</label
+                            >
+                            <p-password
+                                id="confirmPassword"
+                                placeholder="Nhập lại mật khẩu mới"
+                                [toggleMask]="true"
+                                formControlName="confirmPassword"
+                                inputStyleClass="w-full p-3 md:w-30rem"
+                            ></p-password>
+                            <div
+                            *ngIf="
+                              resetPasswordForm.errors?.['passwordMismatch'] &&
+                              (resetPasswordForm.get('confirmPassword')?.dirty ||
+                                resetPasswordForm.get('confirmPassword')?.touched)
+                            "
+                          >
+                            <div class="error-message">Mật khẩu xác nhận không khớp.</div>
+                          </div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label
+                                for="otp"
+                                class="block text-900 font-medium text-xl mb-2"
+                                >Mã OTP</label
+                            >
+                            <input
+                                id="otp"
+                                type="text"
+                                placeholder="Nhập mã OTP"
+                                pInputText
+                                class="w-full md:w-30rem"
+                                style="padding: 1rem"
+                                formControlName="otp"
+                            />
+                        </div>
+
+                        <div style="float: right; padding-bottom: 10px;">
+                            <a [routerLink]="['/auth/resend-email-otp']"
                                 class="font-medium no-underline ml-2 text-right cursor-pointer"
                                 style="color: var(--primary-color)"
-                                >Quên mật khẩu?</a
+                                >Lấy lại mã OTP!</a
                             >
                         </div>
+                     
                         <button
                             pButton
                             pRipple
-                            label="Đăng nhập"
+                            label="XÁC NHẬN"
                             class="w-full p-3 text-xl"
                             type="submit"
                         ></button>
@@ -136,5 +166,8 @@
         </div>
     </form>
 </div>
+
+
+
 
 <!-- [routerLink]="['/']" -->
