--- a/src/app/components/pages/brand/brand.component.html
+++ b/src/app/components/pages/brand/brand.component.html
@@ -31,7 +31,7 @@
                   <i class="pi pi-search"></i>
                   <input type="text" class="form-control" [(ngModel)]="keySearch"
                   (ngModelChange)="onSearchTermChanged($event)"
-                  placeholder="Tìm kiếm theo Tên/Mã/người tạo"
+                  placeholder="Tìm kiếm theo tên thương hiệu"
                   style="padding-left: 30px; height: 37px;" />
                 </span>
               </div>
