--- a/src/app/components/pages/product-category/show-product-category/show-product-category.component.html
+++ b/src/app/components/pages/product-category/show-product-category/show-product-category.component.html
@@ -38,7 +38,7 @@
                   type="text"
                   class="form-control"
                   [(ngModel)]="searchTerm"
-                  placeholder="Tìm kiếm theo Tên/Mã danh mục/người tạo/danh mục cha"
+                  placeholder="Tìm kiếm theo tên danh mục"
                   style="padding-left: 30px; height: 37px"
                   (input)="onSearch($event)"
                   #searchInput
