--- a/src/app/components/pages/merchandise/branch-receiving/branch-receiving.component.html
+++ b/src/app/components/pages/merchandise/branch-receiving/branch-receiving.component.html
@@ -492,8 +492,8 @@
                                 </div>
                                 <div class="col-12 mb-2 md:col-6 md:mb-0 flex justify-content-end">
                                     {{ this.ladingData?.iAccepted === 'waiting' ? 'Đang chuyển' 
-                                    : this.ladingData?.iAccepted === 'accept' ? 'Chuyển thành công' 
-                                    : this.ladingData?.iAccepted === 'reject' ? 'Hủy chuyển hàng' 
+                                    : this.ladingData?.iAccepted === 'accept' ? 'Nhận hàng thành công' 
+                                    : this.ladingData?.iAccepted === 'reject' ? 'Hủy nhận hàng' 
                                     : this.ladingData?.iAccepted }}
                                 </div>
                             </div>
@@ -557,7 +557,7 @@
                                 pButton
                                 pRipple
                                 icon="pi pi-check"
-                                [label]="isAccept ? 'Đã chuyển hàng' : isRejected ? 'Đã hủy chuyển hàng' : 'Nhận hàng'"
+                                [label]="isAccept ? 'Đã chuyển hàng' : isRejected ? 'Đã hủy nhận hàng' : 'Nhận hàng'"
                                 type="button"
                                 [disabled]="isAccept || isRejected"
                                 (click)="showConfirmDialog2()"
@@ -583,13 +583,26 @@
 </p-dialog>
 
 <p-dialog *ngIf="userCurrent?.branchId === this.ToBranchId"
-    [(visible)]="displayConfirmation2" [modal]="true" [closable]="false" header="Xác nhận chuyển hàng">
-    <p>Bạn muốn xác nhận đơn chuyển hàng này chứ ?</p>
+    [(visible)]="displayConfirmation2" [modal]="true" [closable]="false" header="Xác nhận nhận hàng">
+    <p>Bạn muốn xác nhận đơn nhận hàng này chứ ?</p>
+    <div style="position: absolute; top: 18px; right: 20px; color: red; cursor: pointer;" (click)="this.hideConfirmDialog2()">
+        <i class="pi pi-times"></i>
+    </div>
+    <p-footer>
+      <button style="margin: 0 20px;" pButton type="button" label="Hủy" (click)="showConfirmDialog3()" icon="pi pi-times" class="ui-button-secondary"></button>
+      <button style="margin: 0 20px;" pButton type="button" label="Xác nhận" (click)="onConfirm()"  icon="pi pi-check"></button>
+    </p-footer>
+</p-dialog>
+
+
+<p-dialog *ngIf="userCurrent?.branchId === this.ToBranchId"
+    [(visible)]="displayConfirmation3" [modal]="true" [closable]="false" header="Xác nhận hủy nhận hàng">
+    <p>Bạn muốn xác nhận hủy nhận hàng này chứ ?</p>
     <!-- <div style="position: absolute; top: 18px; right: 20px; color: red; cursor: pointer;" (click)="this.hideConfirmDialog2()">
         <i class="pi pi-times"></i>
     </div> -->
     <p-footer>
-      <button style="margin: 0 20px;" pButton type="button" label="Hủy" (click)="this.hideConfirmDialog2()" icon="pi pi-times" class="ui-button-secondary"></button>
-      <button style="margin: 0 20px;" pButton type="button" label="Xác nhận" (click)="onConfirm()"  icon="pi pi-check"></button>
+      <button style="margin: 0 20px;" pButton type="button" label="Hủy" (click)="this.hideConfirmDialog3()" icon="pi pi-times" class="ui-button-secondary"></button>
+      <button style="margin: 0 20px;" pButton type="button" label="Xác nhận" (click)="onReject()"  icon="pi pi-check"></button>
     </p-footer>
 </p-dialog>
