--- a/src/app/components/pages/merchandise/branch-transfer/branch-transfer.component.html
+++ b/src/app/components/pages/merchandise/branch-transfer/branch-transfer.component.html
@@ -263,55 +263,23 @@
                                         style="position: relative"
                                     >
 
-                                    <span *ngIf="!data.isEditing && data.productType === 0" 
+                                    <span *ngIf="data.productType === 0" 
                                         style="cursor: pointer;" 
                                         >
-                                        {{ data.quantity || 0 }} / {{ this.totalRecords }}
+                                        {{ data.quantity || 0 }} / {{ data.totalRecords2 || 0 }}
                                     </span>
-
-                                    <!-- <p-inputNumber
-                                        *ngIf="data.isEditing && data.productType === 0"
-                                        [(ngModel)]="data.quantity"
-                                        (onFocus)="functionService.handleFocusPrice($event)"
-                                        (ngModelChange)="updateTotal(data); validateQuantity(data)"
-                                        (onFocus)="functionService.handleFocusPrice($event)"
-                                        (onBlur)="toggleEdit(data, true)"
-                                        (onKeydown.enter)="toggleEdit(data, true)"  
-                                        buttonLayout="horizontal"
-                                        inputId="horizontal"
-                                        spinnerMode="horizontal"
-                                        [min]="0"
-                                        [step]="0"
-                                        [max]="this.totalRecords"
-                                    /> -->
 
                                     <span *ngIf="data.isValid" class="error-message" style="color: red; font-size: 12px;">
                                         {{ data.isValidMessageQuantity }} <!-- Error message when invalid quantity -->
                                     </span>
 
                                     <span
-                                        *ngIf="!data.isEditing2 && data.productType === 1"
+                                        *ngIf="data.productType === 1"
                                         style="  
                                             width: 100%;
                                         "
                                         
-                                        >{{ data.quantity }} / {{ this.totalRecords }}</span
-                                    >
-                                    <!-- <p-inputNumber
-                                        *ngIf="data.isEditing2 && data.productType === 1"
-                                        [(ngModel)]="data.quantity"
-                                        (onFocus)="functionService.handleFocusPrice($event)"
-                                        (ngModelChange)="updateTotal(data); validateQuantity(data)"
-                                        (onFocus)="functionService.handleFocusPrice($event)"
-                                        (onBlur)="toggleEdit2(data, true)"
-                                        (onKeydown.enter)="toggleEdit2(data, true)"  
-                                        buttonLayout="horizontal"
-                                        inputId="horizontal"
-                                        spinnerMode="horizontal"
-                                        [min]="0"
-                                        [step]="0"
-                                        [max]="this.totalRecords"
-                                    /> -->
+                                        >{{ data.quantity || 0 }} / {{ data.totalRecords || 0 }}</span>
                                     <span
                                         style="
                                             position: absolute;
@@ -372,6 +340,29 @@
                                         <ng-template pTemplate="content">
                                             <div *ngIf="selectedProduct">
                                                 <h3>{{ selectedProduct.name }}</h3>
+                                                <div style="padding: 10px 0;">
+                                                    <div class="flex flex-column">
+                                                        <span class="block mt-2 md:mt-0 p-input-icon-left">
+                                                            <i class="pi pi-search"></i>
+                                                            <input
+                                                                pInputText
+                                                                type="text"
+                                                                placeholder="Tìm theo mã code"
+                                                                [(ngModel)]="productCodeSearchTerm"
+                                                                style="width: 350px"
+                                                                class="sm:"
+                                                            />
+                                                            <button 
+                                                                pButton 
+                                                                type="button" 
+                                                                label="Tìm kiếm"
+                                                                (click)="searchByProductCode()"
+                                                                style="margin-left: 10px;"
+                                                            ></button>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                               
                                                 <div style="margin-top: 20px;" *ngIf="selectedProduct.productCodeData?.length > 0">
                                                     <div style="display: flex; flex-wrap: wrap;">
                                                         <div style="display: flex;" *ngFor="let code of selectedProduct.productCodeData">
@@ -388,6 +379,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
+                                                <p style="font-weight: 600; text-align: center; margin: 50px 0; " *ngIf="selectedProduct.productCodeData?.length === 0">Không có dữ liệu để hiển thị.</p>
                                                 <span *ngIf="selectedProduct.isValid1" class="error-message" style="color: red;">
                                                     {{ selectedProduct.isValidMessage3 }}
                                                 </span>
@@ -421,6 +413,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
+                                                <p style="font-weight: 600; text-align: center; margin: 50px 0; " *ngIf="selectedFrameEngin.frameEngineData?.length === 0">Không có dữ liệu để hiển thị.</p>
                                                 <span *ngIf="selectedFrameEngin.isValid" class="error-message" style="color: red;">
                                                     {{ selectedFrameEngin.isValidMessage }}
                                                 </span>
