--- a/src/app/components/pages/warehouse/stock-in/show/show.component.html
+++ b/src/app/components/pages/warehouse/stock-in/show/show.component.html
@@ -279,7 +279,7 @@
                                         }}
                                     </td>
                                 </tr>
-                                <tr
+                                <!-- <tr
                                     *ngIf="
                                         data &&
                                         data.inventoryStockDetailProductImeis &&
@@ -318,7 +318,7 @@
                                             </div>
                                         </div>
                                     </td>
-                                </tr>
+                                </tr> -->
                                 <tr
                                     *ngIf="
                                         data &&
@@ -329,7 +329,7 @@
                                     <td colspan="8" class="p-3 border-none">
                                         <div class="flex flex-column">
                                             <label for="" class="mb-2"
-                                                >Mã code:
+                                                >Mã Serial:
                                             </label>
                                             <div
                                                 style="
