--- a/src/app/components/pages/warranty/warranty-request/create/create.component.html
+++ b/src/app/components/pages/warranty/warranty-request/create/create.component.html
@@ -193,13 +193,13 @@
                                 <th>Tên sản phẩm</th>
                                 <th style="text-align: center">Mã bảo hành</th>
                                 <th style="text-align: center">Số lượng</th>
+                                <!-- <th style="text-align: center">Trạng thái</th> -->
                                 <th style="text-align: center">
                                     Hẹn trả khách
                                 </th>
                                 <th></th>
                             </tr>
                         </ng-template>
-
                         <ng-template pTemplate="body" let-data let-i="rowIndex">
                             <tr style="height: 105px">
                                 <td style="width: 3%">
@@ -235,6 +235,18 @@
                                     {{ warrantyId }}
                                 </td>
                                 <td style="width: 7%; text-align: center">1</td>
+                                <!-- <td>
+                                    <p-dropdown
+                                        [options]="statusList"
+                                        [style]="{ width: '100%' }"
+                                        optionLabel="label"
+                                        [showClear]="true"
+                                        [emptyMessage]="
+                                            'Vui lòng chọn tỉnh/huyện trước!'
+                                        "
+                                        optionValue="id"
+                                    ></p-dropdown>
+                                </td> -->
                                 <td style="width: 22.5%; text-align: center">
                                     <input
                                         type="datetime-local"
