--- a/src/app/components/pages/warranty/warranty-request/show/show.component.html
+++ b/src/app/components/pages/warranty/warranty-request/show/show.component.html
@@ -2,7 +2,7 @@
     <div class="col-12">
         <p-toolbar styleClass="mb-2">
             <div class="">
-                <h3>Phiếu bảo hành</h3>
+                <h3>Yêu cầu bảo hành</h3>
                 <p-breadcrumb
                     [model]="items"
                     [home]="{ icon: 'pi pi-home' }"
@@ -35,14 +35,12 @@
             >
                 <ng-template pTemplate="caption">
                     <div
-                        class="flex flex-column gap-3 align-items-end md:flex-row md:"
-                    >
+                        class="flex flex-column gap-3 align-items-end md:flex-row md:">
                         <div class="flex flex-column">
                             <label
                                 for="email1"
                                 class="block text-900 text-large font-weight mb-2"
-                                >Tìm tên khách hàng/SĐT:</label
-                            >
+                                >Tìm tên khách hàng/SĐT:</label>
                             <span class="block mt-2 md:mt-0 p-input-icon-left">
                                 <i class="pi pi-search"></i>
                                 <input
