--- a/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
+++ b/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
@@ -1,178 +1,250 @@
 <main id="main" class="main">
-    <div class="pagetitle">
-        <div class="">
-          <h3>Danh sách chuyển hàng</h3>
-          <p-breadcrumb
-              [model]="items"
-              [home]="{ icon: 'pi pi-home' }"
-          ></p-breadcrumb>
-        </div>
-    
-        <div class="btn-add-wrapper">
-          <button
-          pButton
-          pRipple
-          label="Thêm mới"
-          style="height: 40px; width: 130px; border-radius: 10px;"
-          [routerLink]="['/pages/merchandise/branch-transfer/create']"
-        ></button>
-        </div>
+  <div class="pagetitle">
+    <div class>
+      <h3>Danh sách chuyển hàng</h3>
+      <p-breadcrumb
+        [model]="items"
+        [home]="{ icon: 'pi pi-home' }"></p-breadcrumb>
     </div>
 
-    <section class="section k-list-table">
-        <div class="row">
-            <div class="col-lg-12">
-              <div class="card-body">
-                <div style="margin-top: 15px" class="card">
-                  <p-table
-                    [value]="ladigns"
-                    [rows]="this.PageSize"
-                    [totalRecords]="totalRecords"
-                    [paginator]="false"
-                    (onPage)="onPageChange($event)"
-                    [style]="{ width: '100%' }"
-                    styleClass="p-datatable-striped"
-                  >
-                    <ng-template pTemplate="caption">
-                        <div
-                            class="flex flex-column gap-3 align-items-end md:flex-row md:"
-                        >
-                            <div class="flex flex-column">
-                                <label
-                                    for="email1"
-                                    class="block text-900 text-large font-weight mb-2"
-                                    >Tìm kiếm mã chuyển hàng:</label
-                                >
-                                <span class="block mt-2 md:mt-0 p-input-icon-left">
-                                    <i class="pi pi-search"></i>
-                                    <input
-                                        pInputText
-                                        type="text"
-                                        placeholder="Tìm theo mã chuyển hàng"
-                                        [(ngModel)]="selectedCode"
-                                        style="width: 350px"
-                                        class="sm:"
-                                    />
-                                    <!-- [(ngModel)]="
+    <div class="btn-add-wrapper">
+      <button
+        pButton
+        pRipple
+        label="Thêm mới"
+        style="height: 40px; width: 130px; border-radius: 10px;"
+        [routerLink]="['/pages/merchandise/branch-transfer/create']"></button>
+    </div>
+  </div>
+
+  <section class="section k-list-table">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card-body">
+          <div style="margin-top: 15px" class="card">
+            <p-table
+              [value]="ladigns"
+              [(selection)]="selectedLadings"
+              selectionMode="multiple"
+              [rows]="this.PageSize"
+              [totalRecords]="totalRecords"
+              [paginator]="false"
+              (onPage)="onPageChange($event)"
+              [style]="{ width: '100%' }"
+              styleClass="p-datatable-striped">
+              <ng-template pTemplate="caption">
+               
+                <div
+                  class="flex flex-column gap-3 align-items-end md:flex-row md:">
+                  <div class="flex flex-column">
+                    <label
+                      for="email1"
+                      class="block text-900 text-large font-weight mb-2">Tìm
+                      kiếm mã chuyển hàng:</label>
+                    <span class="block mt-2 md:mt-0 p-input-icon-left">
+                      <i class="pi pi-search"></i>
+                      <input
+                        pInputText
+                        type="text"
+                        placeholder="Tìm theo mã chuyển hàng"
+                        [(ngModel)]="selectedCode"
+                        style="width: 350px"
+                        class="sm:" />
+                      <!-- [(ngModel)]="
                                             this.optionsFillerProduct.KeyWord
                                         " -->
-                                </span>
-                            </div>
-                            <div class="flex flex-column">
-                                <label
-                                    for="email1"
-                                    class="block text-900 text-large font-weight mb-2"
-                                    >Chọn chi nhánh:</label
-                                >
-                                <p-dropdown
-                                  [options]="branch" 
-                                  optionLabel="shortenedName" 
-                                  [(ngModel)]="selectedBranchId"
-                                  optionValue="id"
-                                  [showClear]="true"
-                                  placeholder="Chọn chi nhánh">
-                            </p-dropdown>
-                            </div>
-                            <div class="flex flex-column">
-                                <label
-                                    for="email1"
-                                    class="block text-900 text-large font-weight mb-2"
-                                    >Trạng thái:</label
-                                >
-                                <p-dropdown
-                                    [options]="statuses" 
-                                    [(ngModel)]="selectedIAccepted"
-                                    optionLabel="label"
-                                    [showClear]="true"
-                                    placeholder="Trạng thái"
-                                >
-                                </p-dropdown>
-                            </div>
-                            <div class="flex flex-column">
-                                <label
-                                    for="email1"
-                                    class="block text-900 text-large font-weight mb-2"
-                                    >Ngày tạo:</label>
-                                <p-calendar
-                                    [showIcon]="true"
-                                    [dateFormat]="this.formatdate"
-                                    [showClear]="true"
-                                    placeholder="Chọn thời gian"
-                                    inputId="icon"
-                                    (onSelect)="onDateSelect($event)"
-                                    (onClear)="onDateClear()"
-                                ></p-calendar>
-                            </div>
-                            <button
-                                pButton
-                                pRipple
-                                label="Lọc"
-                                (click)="clickButtonFilter()"
-                            ></button>
-                        </div>
-                    </ng-template>
+                    </span>
+                  </div>
+                  <div class="flex flex-column">
+                    <label
+                      for="email1"
+                      class="block text-900 text-large font-weight mb-2">Chọn
+                      chi nhánh:</label>
+                    <p-dropdown
+                      [options]="branch"
+                      optionLabel="shortenedName"
+                      [(ngModel)]="selectedBranchId"
+                      optionValue="id"
+                      [showClear]="true"
+                      placeholder="Chọn chi nhánh">
+                    </p-dropdown>
+                  </div>
+                  <div class="flex flex-column">
+                    <label
+                      for="email1"
+                      class="block text-900 text-large font-weight mb-2">Trạng
+                      thái:</label>
+                    <p-dropdown
+                      [options]="statuses"
+                      [(ngModel)]="selectedIAccepted"
+                      optionLabel="label"
+                      [showClear]="true"
+                      placeholder="Trạng thái">
+                    </p-dropdown>
+                  </div>
+                  <div class="flex flex-column">
+                    <label
+                      for="email1"
+                      class="block text-900 text-large font-weight mb-2">Ngày
+                      tạo:</label>
+                    <p-calendar
+                      [showIcon]="true"
+                      [dateFormat]="this.formatdate"
+                      [showClear]="true"
+                      placeholder="Chọn thời gian"
+                      inputId="icon"
+                      (onSelect)="onDateSelect($event)"
+                      (onClear)="onDateClear()"></p-calendar>
+                  </div>
+                  <button
+                    pButton
+                    pRipple
+                    label="Lọc"
+                    (click)="clickButtonFilter()">
+                  </button>
+                </div>
+                <div class="icon-file" *ngIf="selectedLadings.length > 0" (click)="generatePDF()">
+                  <i style="font-size: 1.5rem; padding: 15px 10px;" class="pi pi-file-pdf"></i>
+                  <label style="font-weight: 600; padding-bottom: 10px; cursor: pointer;" for="">Xuất file PDF</label>
+                </div>
+              </ng-template>
 
-                    <ng-template pTemplate="header">
-                      <tr>
-                        <th style="width: 1%; font-size: 14px;">STT</th>
-                        <th style="width: 8%; font-size: 14px;">Mã chuyển hàng</th>
-                        <th style="width: 12%; font-size: 14px;">Người tạo</th>
-                        <th style="width: 12%; font-size: 14px;">Từ chi nhánh</th>
-                        <th style="width: 12%; font-size: 14px;">Đến chi nhánh</th>
-                        <th style="width: 8%; font-size: 14px;">Trạng thái</th>
-                        <th style="width: 5%; font-size: 14px;">Số sản phẩm</th>
-                      </tr>
-                    </ng-template>
+            
 
-                    <ng-template pTemplate="body" let-user let-i="rowIndex">
-                      <tr class="custom-table">
-                        <td style="font-size: 14px;"  [routerLink]="['/pages/merchandise/branch-receiving', user.id]">
-                          {{user.id}}</td>
-                        <td style="font-size: 14px;">{{ user.code }}</td>
-                        <td style="font-size: 14px;">{{ user.createName }}</td>
-                        <td style="font-size: 14px; max-width: 110px; overflow: hidden;">{{ user.fromBranchName }}</td>
-                        <td style="font-size: 14px; max-width: 110px; overflow: hidden;">{{ user.toBranchName }}</td>
-                        <td style="text-align: center;">
-                          <button
-                            class="status-button"
-                            [ngClass]="{
+              <ng-template pTemplate="header">
+                <tr>
+                  <th style="width: 3%; font-size: 14px">
+                    <p-tableHeaderCheckbox class="small-checkbox"></p-tableHeaderCheckbox>
+                  </th>
+                  <th style="width: 8%; font-size: 14px;">Mã chuyển hàng</th>
+                  <th style="width: 12%; font-size: 14px;">Người tạo</th>
+                  <th style="width: 12%; font-size: 14px;">Từ chi nhánh</th>
+                  <th style="width: 12%; font-size: 14px;">Đến chi nhánh</th>
+                  <th style="width: 8%; font-size: 14px;">Trạng thái</th>
+                  <th style="width: 5%; font-size: 14px;">Số sản phẩm</th>
+                </tr>
+              </ng-template>
+
+              <ng-template pTemplate="body" let-user let-i="rowIndex">
+                <tr class="custom-table">
+                  <td style="width: 3%">
+                    <p-tableCheckbox [value]="user" class="small-checkbox"></p-tableCheckbox>
+                  </td>
+                  <td style="font-size: 14px;" [routerLink]="['/pages/merchandise/branch-receiving', user.id]">{{ user.code }}</td>
+                  <td style="font-size: 14px;">{{ user.createName }}</td>
+                  <td
+                    style="font-size: 14px; max-width: 110px; overflow: hidden;">{{
+                    user.fromBranchName }}</td>
+                  <td
+                    style="font-size: 14px; max-width: 110px; overflow: hidden;">{{
+                    user.toBranchName }}</td>
+                  <td style="text-align: center;">
+                    <button
+                      class="status-button"
+                      [ngClass]="{
                               'status-waiting': user.iAccepted === 'waiting',
                               'status-accept': user.iAccepted === 'accept',
                               'status-reject': user.iAccepted === 'reject'
-                            }"
-                          >
-                            {{ getStatus(user.iAccepted) }}
-                          </button>
-                        </td>
-                        <td style="font-size: 14px;">{{ user.totalCount }}</td>
-                    </tr>
-                    </ng-template>
-                  </p-table>
-                  <div *ngIf="totalRecords === 0" style="text-align: center">
-                    <strong style="text-align: center; width: 100%"
-                      >Không tìm thấy kết quả phù hợp</strong
-                    >
-                  </div>
-                  <div class="paging-bot dg-fix">
-                    <div class="paging-info">
-                      <div [innerHTML]="currentPageReport"></div>
-                    </div>
-                    <p-paginator
-                            [rows]="this.PageSize"
-                            (onPageChange)="onPageChange($event)"
-                            [totalRecords]="totalRecords > 0 ? totalRecords : 1"
-                            [rowsPerPageOptions]="[10, 20, 30]"
-                            [first]="
-                              (this.PageIndex - 1) *
-                              this.PageSize
-                            "
-                          ></p-paginator>
-                  </div>
-                </div>
-              </div>
+                            }">
+                      {{ getStatus(user.iAccepted) }}
+                    </button>
+                  </td>
+                  <td style="font-size: 14px;">{{ user.totalCount }}</td>
+                </tr>
+              </ng-template>
+            </p-table>
+            <div *ngIf="totalRecords === 0" style="text-align: center">
+              <strong style="text-align: center; width: 100%">Không tìm thấy kết
+                quả phù hợp</strong>
             </div>
+            <div class="paging-bot dg-fix">
+              <div class="paging-info">
+                <div [innerHTML]="currentPageReport"></div>
+              </div>
+              <p-paginator
+                [rows]="this.PageSize"
+                (onPageChange)="onPageChange($event)"
+                [totalRecords]="totalRecords > 0 ? totalRecords : 1"
+                [rowsPerPageOptions]="[10, 20, 30]"
+                [first]="(this.PageIndex - 1) * this.PageSize">
+              </p-paginator>
+            </div>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
+  <div class="transfer-note" id="transferNote" style="display: none;">
+    <div class="header">
+      <div style="display: flex;" class="company-info">
+        <img style="padding: 10px;" src="assets/image/logo/logo.png" alt="logo">
+        <div style="padding: 28px 10px;">
+          <h4 style="font-size: 14px;">CÔNG TY TNHH THƯƠNG MẠI DỊCH VỤ VÀ XUẤT KHẨU TIẾN LINH</h4>
+          <p style="padding: 10px 0; font-size: 14px;">ĐC: Yên phú - Yên Mỹ - Hưng Yên</p>
+        </div>
+      </div>
+    </div>
+    <div class="transfer-code">
+      <p style="font-style: italic; font-weight: 600; font-size: 16px;">Mã Phiếu chuyển:</p>
+    </div>
+
+    <h3 style="text-align: center;">PHIẾU CHUYỂN KHO</h3>
+
+    <div class="details">
+      <div class="content-transfer">
+        <p>Chi nhánh chuyển: <span class="from-branch-name"></span></p>
+         <!-- Cập nhật nội dung ở đây -->
+        <p>SĐT:  <span class="from-branch-phone"></span></p>
+        <!-- Cập nhật SĐT -->
+        <p>Địa chỉ:  <span class="from-branch-address"></span></p>
+        <!-- Cập nhật địa chỉ -->
+        <p>Ngày xuất: <span class="export-date"></span></p>
+         <!-- Cập nhật ngày xuất -->
+      </div>
+      <div style="margin-left: 50px;" class="content-transfer">
+        <p>Chi nhánh nhận: <span class="to-branch-name"></span></p>
+         <!-- Cập nhật nội dung ở đây -->
+        <p>SĐT: <span class="to-branch-phone"></span></p>
+         <!-- Cập nhật SĐT -->
+        <p>Địa chỉ: <span class="to-branch-address"></span></p>
+         <!-- Cập nhật địa chỉ -->
+        <p>Ngày nhận: <span class="export-date"></span></p>
+         <!-- Cập nhật ngày xuất -->
+      </div>
+    </div>
+    
+
+    <h4 >Danh sách đơn hàng</h4>
+
+    <div>
+      <table class="orders-table">
+        <thead>
+          <tr>
+            <th style="width: 5%;">#</th>
+            <th style="width: 15%;">Tên sản phẩm</th>
+            <th style="width: 12%;">Số serial</th>
+            <th style="width: 10%;">ĐVT</th>
+            <th style="width: 10%;">SL Xuất</th>
+          </tr>
+        </thead>
+        <tbody>
+        
+        </tbody>
+      </table>
+    </div>
+
+    <div class="footer">
+      <div>
+        <p>Người nhận hàng<br>( ký, ghi rõ họ tên )</p>
+      </div>
+      <div>
+        <p>Người giao hàng<br>( ký, ghi rõ họ tên )</p>
+      </div>
+      <div>
+        <p>Quản lý kho hàng<br>( ký, ghi rõ họ tên )</p>
+      </div>
+    </div>
+  </div>
 
 </main>
