--- a/src/app/components/pages/inventory-product/show/show.component.html
+++ b/src/app/components/pages/inventory-product/show/show.component.html
@@ -82,7 +82,7 @@
                                 />
                             </div>
                         </div> -->
-                        <div
+                        <!-- <div
                             *ngIf="userCurrent.branchId == 1"
                             class="flex flex-column"
                         >
@@ -102,7 +102,7 @@
                                 field="name"
                                 [showClear]="true"
                             />
-                        </div>
+                        </div> -->
                         <button
                             pButton
                             pRipple
@@ -120,7 +120,7 @@
                         </th>
                         <th>Kiểu sản phẩm</th>
                         <th>Đơn vị tính</th>
-                        <th>Chi nhánh</th>
+                        <!-- <th>Chi nhánh</th> -->
                         <th>Tồn kho</th>
                     </tr>
                 </ng-template>
@@ -196,7 +196,7 @@
                             >
                         </td>
                         <td>{{ product.unitName }}</td>
-                        <td>{{ product.branchName }}</td>
+                        <!-- <td>{{ product.branchName }}</td> -->
                         <td>{{ product.quantity }}</td>
                     </tr>
                 </ng-template>
